--- a/src/assets/scss/style5.scss
+++ b/src/assets/scss/style5.scss
@@ -1077,9 +1077,11 @@ section {
   }
   &__gray-line {
     height: 1px;
-    width: 0;
-    transition: 0.3s;
-    background-color: rgba(255, 254, 248, 0.5);
+    width: 100%;
+    .gray-line {
+      transition: 0.3s;
+      background-color: rgba(255, 254, 248, 0.5);
+    }
   }
   &__video {
     width: 100%;
@@ -2249,13 +2251,16 @@ input.input-text, textarea.input-text {
   }
   &__gray-line {
     height: 1px;
-    width: 0;
-    background: rgba(20, 14, 10, 0.16);
+    width: 100%;
     position: absolute;
     left: 0;
     bottom: 6.4rem;
-    transition: 0.3s;
+
     z-index: 3;
+    .gray-line {
+      background: rgba(20, 14, 10, 0.16);
+      transition: 0.3s;
+    }
   }
   &__button-anchor {
     position: absolute;
@@ -2552,18 +2557,16 @@ input.input-text, textarea.input-text {
     }
   }
   &__left {
-    width: 40rem;
-    font-size: 1.4rem;
-    line-height: 1.4;
-    text-transform: uppercase;
-    letter-spacing: 0.12em;
-    height: 50rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     &-text {
       width: 28rem;
       margin-bottom: 4rem;
+      font-size: 1.4rem;
+      line-height: 1.4;
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
     }
     &-img {
       width: 25.1rem;
@@ -2687,7 +2690,7 @@ input.input-text, textarea.input-text {
   }
 }
 
-.intoAnimation .project-description__top-item {
+.project-description__top-item {
   height: 9.5rem;
   padding-top: 2.3rem;
   padding-bottom: 2.3rem;
