--- a/src/assets/scss/mobile5.css
+++ b/src/assets/scss/mobile5.css
@@ -208,6 +208,9 @@
     z-index: 11002;
     top: 2.5rem;
   }
+  .modal-wrapper {
+    height: 0;
+  }
   .header {
     margin: 0;
     padding-top: 1.6rem;
@@ -223,6 +226,11 @@
   .header.hide-phone {
     width: 35.3rem;
     transition: width 0s;
+    background: transparent !important;
+    transition: 1s;
+  }
+  .header.hide-phone path {
+    fill: #FFFEF8 !important;
   }
   .header.hide-phone .mob-phone {
     position: relative;
@@ -1617,11 +1625,18 @@
   .feedback__top {
     position: relative;
     overflow: hidden;
+    height: auto;
   }
   .feedback__info {
     margin-top: 4rem;
     position: relative;
     overflow: hidden;
+  }
+  .feedback__top-animation {
+    height: auto !important;
+  }
+  .intoAnimation .feedback__top-animation {
+    height: auto !important;
   }
   .feedback__info-title {
     margin-bottom: 2.4rem;
@@ -2110,6 +2125,17 @@
     width: 17.2rem;
     height: 32rem;
   }
+  .project-gallery__img img {
+    height: 100%;
+    width: 100%;
+  }
+  .project-gallery__planning .project-gallery__img {
+    width: 100%;
+    height: 42rem;
+  }
+  .project-gallery__planning .project-gallery__img img {
+    object-fit: contain;
+  }
   .project-gallery__content:first-child .project-gallery__img {
     height: 37rem;
   }
@@ -2118,7 +2144,36 @@
   }
   .project-gallery__planning {
     width: 100%;
-    height: 26.1rem;
+    height: auto;
+  }
+  .project-gallery__planning {
+    display: block;
+    width: 36.1rem;
+    margin: 0 auto 8rem;
+  }
+  .project-gallery__text-center {
+    font-family: "Forum", serif;
+    font-size: 1.6rem;
+    line-height: 1;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    text-align: center;
+    width: 32.9rem;
+    margin: 0 auto;
+    padding: 4rem 0 5.6rem;
+  }
+  .project-gallery__text-left {
+    font-family: "Forum", serif;
+    font-size: 1.6rem;
+    line-height: 1;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    width: 32.9rem;
+    margin-left: 1.6rem;
+    padding: 4rem 0 5.6rem;
+  }
+  .project-gallery__text-left.pt-0 {
+    padding-top: 0;
   }
   .project-gallery__title {
     font-size: 3.2rem;
