--- a/src/assets/scss/mobile5.scss
+++ b/src/assets/scss/mobile5.scss
@@ -244,6 +244,10 @@ $vh: calc(100vh/700);
     top: 2.5rem;
   }
 
+  .modal-wrapper {
+    height: 0;
+  }
+
   .header {
     margin: 0;
     padding-top: 1.6rem;
@@ -258,6 +262,11 @@ $vh: calc(100vh/700);
     &.hide-phone {
       width: 35.3rem;
       transition: width 0s;
+      background: transparent !important;
+      transition: 1s;
+      path {
+        fill: $primary-light-color !important;
+      }
       .mob-phone {
         position: relative;
         overflow: hidden;
@@ -1754,11 +1763,20 @@ $vh: calc(100vh/700);
   .feedback__top {
     position: relative;
     overflow: hidden;
+    height: auto;
   }
   .feedback__info {
     margin-top: 4rem;
     position: relative;
     overflow: hidden;
+  }
+
+  .feedback__top-animation {
+    height: auto !important;
+  }
+
+  .intoAnimation .feedback__top-animation {
+    height: auto !important;
   }
 
   .feedback__info-title {
@@ -2262,6 +2280,17 @@ $vh: calc(100vh/700);
     width: 17.2rem;
     height: 32rem;
   }
+  .project-gallery__img img {
+    height: 100%;
+    width: 100%;
+  }
+  .project-gallery__planning .project-gallery__img {
+    width: 100%;
+    height: 42rem;
+    img {
+      object-fit: contain;
+    }
+  }
   .project-gallery__content:first-child .project-gallery__img {
     height: 37rem;
     img {
@@ -2270,7 +2299,36 @@ $vh: calc(100vh/700);
   }
   .project-gallery__planning {
     width: 100%;
-    height: 26.1rem;
+    height: auto;
+  }
+  .project-gallery__planning {
+    display: block;
+    width: 36.1rem;
+    margin: 0 auto 8rem;
+  }
+  .project-gallery__text-center {
+    font-family: 'Forum', serif;
+    font-size: 1.6rem;
+    line-height: 1;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    text-align: center;
+    width: 32.9rem;
+    margin: 0 auto;
+    padding: 4rem 0 5.6rem;
+  }
+  .project-gallery__text-left {
+    font-family: 'Forum', serif;
+    font-size: 1.6rem;
+    line-height: 1;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    width: 32.9rem;
+    margin-left: 1.6rem;
+    padding: 4rem 0 5.6rem;
+    &.pt-0 {
+      padding-top: 0;
+    }
   }
   .project-gallery__title {
     font-size: 3.2rem;
