--- a/src/assets/scss/style8.css
+++ b/src/assets/scss/style8.css
@@ -1971,7 +1971,7 @@ input.input-text, textarea.input-text {
 }
 .prices-design__field:before {
   content: "";
-  min-width: 0.625rem;
+  width: 0.625rem;
   height: 0.625rem;
   background-color: rgba(20, 14, 10, 0.16);
   border-radius: 50%;
